apps/production/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: pfsense-ca-issuer
    k8s.apisix.apache.org/upstream-scheme: https
spec:
  ingressClassName: apisix
  rules:
    - host: keycloak.apps.lab.okd.local
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  name: https
            path: /*
            pathType: ImplementationSpecific
  tls:
  - hosts:
    - keycloak.apps.lab.okd.local
    secretName: keycloak-ingress-tls
